# study-kit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  EVALUATION_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml  openapi.yaml  render.yaml  tailwind.config.ts
.github/workflows/: ci-cd.yml
backend/: README.md  alembic.ini  pyproject.toml  pytest.ini  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  schemas.py  text_history.py  user.py
backend/app/utils/: nlp.py
backend/tests/: test_api.py
backend/tests/integration/: test_api_integration.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ErrorCard.tsx  TextEditor.tsx
frontend/src/components/__tests__/: ErrorCard.test.tsx  Footer.test.tsx  Header.test.tsx  NavLink.test.tsx  ResultsPanel.test.tsx  Statistics.test.tsx  TextEditor.test.tsx
frontend/src/lib/: grammarChecker.ts
frontend/src/pages/: Index.tsx
src/components/: Footer.tsx  Header.tsx  HighlightedText.tsx  ResultsPanel.tsx  Statistics.tsx  TextEditor.tsx
src/lib/: grammarChecker.ts
src/types/: grammar.ts
