[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "language-tool-python>=3.2.2",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "protobuf>=6.33.4",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.45",
    "sumy>=0.11.0",
    "textblob>=0.19.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.40.0",
]
